--- a/d-day_widget.html
+++ b/d-day_widget.html
@@ -28,20 +28,23 @@ body{
 }
 
 .days {
-  background: #EF2F3C;
+  background: #F1EDE4;
+  color: #303030; 
 }
 
 .hours {
-  background: #eeeeee;
-  color: #183059;
+  background: #F1EDE4;
+  color: #303030; 
 }
 
 .minutes {
-  background: #276FBF;
+  background: #F1EDE4;
+  color: #303030; 
 }
 
 .seconds {
-  background: #F0A202;
+  background: #F1EDE4;
+  color: #303030; 
 }
 
 .numbers {
